--- a/chat-backend/tsconfig.json
+++ b/chat-backend/tsconfig.json
@@ -7,7 +7,18 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@config/*": ["config/*"],
+      "@controllers/*": ["controllers/*"],
+      "@middlewares/*": ["middlewares/*"],
+      "@models/*": ["models/*"],
+      "@routes/*": ["routes/*"],
+    }
+  },
+  "ts-node": { 
+    "require": ["tsconfig-paths/register"] 
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
