--- a/chat-backend/.env.example
+++ b/chat-backend/.env.example
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/chatapp
+MONGO_URI=mongodb://localhost:27017/
 ACCESS_TOKEN_SECRET=your-access-token-secret
 REFRESH_TOKEN_SECRET=your-refresh-token-secret
 NODE_ENV=development
